--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Quiz en ligne</title>
+  <title>Frog Culture</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,6 +22,16 @@
       <button id="createRoomBtn" disabled>Créer une salle</button>
     </div>
   </div>
+
+  <!-- Barre de volume en haut à droite -->
+  <input 
+  type="range" 
+  id="globalVolumeSlider"
+  min="0" 
+  max="1" 
+  step="0.01" 
+  value="1" 
+  />
   
   <!-- Écran de création de salle -->
   <div id="createRoomScreen" class="hidden">
