--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,7 @@
   </div>
     
   
+  <script src="https://www.youtube.com/iframe_api"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="app.js"></script>
 </body>
